// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Navbar /> adds a brand node 1`] = `
<Navbar
  brand={
    <span
      className="brando"
    >
      I AM BRAND
    </span>
  }
  leftLinks={Array []}
  menuIcon={
    <Icon>
      menu
    </Icon>
  }
  options={
    Object {
      "draggable": true,
      "edge": "left",
      "inDuration": 250,
      "onCloseEnd": null,
      "onCloseStart": null,
      "onOpenEnd": null,
      "onOpenStart": null,
      "outDuration": 200,
      "preventScrolling": true,
    }
  }
  rightLinks={Array []}
>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <span
        className="brando brand-logo center"
      >
        I AM BRAND
      </span>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          <i
            className="material-icons"
          >
            menu
          </i>
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav "
    id="mobile-nav"
  />
</Navbar>
`;

exports[`<Navbar /> can be extended with custom elements 1`] = `
<Fragment>
  <nav
    className="nav-extended"
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
    <div
      className="nav-content"
    >
      <div
        className="col s12"
      >
        <a
          className="breadcrumb"
          href="#!"
        >
          First
        </a>
        <a
          className="breadcrumb"
          href="#!"
        >
          Second
        </a>
        <a
          className="breadcrumb"
          href="#!"
        >
          Third
        </a>
      </div>
    </div>
  </nav>
  <ul
    className="sidenav "
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> can be fixed 1`] = `
<Fragment>
  <div
    className="navbar-fixed"
  >
    <nav
      className=""
    >
      <div
        className="nav-wrapper"
      >
        <a
          className="sidenav-trigger"
          data-target="mobile-nav"
          href="#!"
        >
          <Icon>
            menu
          </Icon>
        </a>
        <ul
          className="hide-on-med-and-down left"
        />
        <ul
          className="hide-on-med-and-down right"
        />
      </div>
    </nav>
  </div>
  <ul
    className="sidenav "
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> can center the brand logo 1`] = `
<Fragment>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo center"
        href="/"
      >
        Logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav "
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> can have children with custom ids 1`] = `
<Fragment>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down "
      >
        <li
          key="0/.0"
        >
          <span
            id="custom-1"
          >
            Custom 1
          </span>
        </li>
        <li
          key="1/.1"
        >
          <span
            id="custom-2"
          >
            Custom 2
          </span>
        </li>
      </ul>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav "
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> can have custom sidenav 1`] = `
<Fragment>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo center"
        href="/"
      >
        Logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav left"
    id="mobile-nav"
  >
    <li
      className="custom-node"
    >
      Custom node!
    </li>
  </ul>
</Fragment>
`;

exports[`<Navbar /> places brand on right if navbar is left aligned 1`] = `
<Fragment>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo center"
        href="/"
      >
        Logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav left"
    id="mobile-nav"
  />
</Fragment>
`;

exports[`<Navbar /> renders 1`] = `
<Fragment>
  <nav
    className=""
  >
    <div
      className="nav-wrapper"
    >
      <a
        className="brand-logo center"
        href="/"
      >
        Logo
      </a>
      <a
        className="sidenav-trigger"
        data-target="mobile-nav"
        href="#!"
      >
        <Icon>
          menu
        </Icon>
      </a>
      <ul
        className="hide-on-med-and-down right"
      >
        <li
          key="0/.0"
        >
          <a
            href="get-started.html"
          >
            Getting started
          </a>
        </li>
        <li
          key="1/.1"
        >
          <a
            href="components.html"
          >
            Components
          </a>
        </li>
      </ul>
      <ul
        className="hide-on-med-and-down left"
      />
      <ul
        className="hide-on-med-and-down right"
      />
    </div>
  </nav>
  <ul
    className="sidenav right"
    id="mobile-nav"
  />
</Fragment>
`;
